5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1745_1539.log
== TEST (2019-05-15 14:38:04) 
-- CODE:
n = input()

print(n)
-- OUTPUT:
0.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:57) 
-- CODE:
x = float(input())
k = int(input())

soma= 0
i = 0
s = 1
aux = 1

while(x>s):
	soma = soma + (aux /1+ x)
	if(aux == 1):
		aux == -1
	else:
		aux =1
	
	i = i + i
	
print(round(x / k,7))
-- OUTPUT:
0.1866667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:11) 
-- CODE:
x = float(input())
k = int(input())

soma= 0
i = 0
s = 1
aux = 1

while(x>s):
	soma = soma + (aux /1+ x)
	if(aux == 1):
		aux == -1
	else:
		aux =1
	
	i = i + i
	s = s - 1
print(round(x / k,7))
-- OUTPUT:
0.1866667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:53:45) 
-- CODE:
x = float(input())
k = int(input())

soma= 0
i = 0
s = 1
aux = 1

while(x>s):
	soma = soma + (aux /1+ x)
	if(aux == 1):
		aux == -1
	else:
		aux =1
	
	i = i + i
	s = s - 1
print(round(soma,7))
-- OUTPUT:
0.1866667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:37) 
-- CODE:
x = float(input())
k = int(input())

soma= 0
i = 0
s = 1
aux = 1

while(x>s):
	soma = soma + (aux /(1+ x)
	if(aux == 1):
		aux == -1
	else:
		aux =1
	
	i = i + i
	s = s - 1
print(round(soma,7))
-- ERROR:
File "XXXX", line 11
    if(aux == 1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:02) 
-- CODE:
x = float(input())
k = int(input())

soma= 0
i = 0
s = 1
aux = 1

while(x>s):
	soma = soma + (aux /(1+ x)
	if(aux == 1):
		aux == -1
	else:
		aux =1
	
	i = i + i
	s = s - 1
print(round(soma,7))
-- ERROR:
File "XXXX", line 11
    if(aux == 1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:14) 
-- CODE:
x = float(input())
k = int(input())

soma= 0
i = 0
s = 1
aux = 1

while(x>s):
	soma = soma + (aux /(1+ x))
	if(aux == 1):
		aux == -1
	else:
		aux =1
	
	i = i + i
	s = s - 1
print(round(soma,7))
-- ERROR:
File "XXXX", line 11
    if(aux == 1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:23) 
-- CODE:
x = float(input())
k = int(input())

soma= 0
i = 0
s = 1
aux = 1

while(x>s):
	soma = soma + (aux /(1+ x))
	if(aux == 1):
		aux == -1
	else:
		aux =1
	
	i = i + i
	s = s - 1
print(round(soma,7))
-- ERROR:
File "XXXX", line 11
    if(aux == 1):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
